# HyperHDG

./: .clang-format  .generate_wiki.sh  .gitignore  .gitmodules  .travis.yml  AbstractProblem.C  AbstractProblem.depr  AbstractProblem.h  AbstractProblem.hpp  AbstractProblem.hxx  AbstractProblem.inst  Authors.md  Authors.txt  CMakeLists.txt  ClassWrapper.pxd  ClassWrapper.pxd2  ClassWrapper.pyx  Connector.C  Connector.h  ConnectorGetter.C  ConnectorGetter.h  Contribute.md  Cythonize.cxx  DiffusionProblem.C  DiffusionProblem.h  DiffusionSolver.C  DiffusionSolver.h  DiffusionSolver.inst  DiffusionSolverNaive.C  DiffusionSolverNaive.cxx  DiffusionSolverNaive.h  DiffusionSolverNaive.hxx  ElasticitySolver.C  ElasticitySolver.h  ElasticitySolver.hxx  ElasticitySolver.inst  Employ.md  EpsilonNeighborhoodGraph.hxx  Executable.py  Executable_Diffusion.py  (+122 more)
.ci/: deploy_doxygen.sh  deploy_wiki.sh  generate_documentation.sh
cython/: AbstractProblem.pxd  AbstractProblem.pyx  Cython.pxd  Cython.pyx  cythonize.cxx  cythonize.pxd  cythonize.pyx  elliptic.cfg  elliptic.pxd  elliptic.pyx  elliptic_loop.pxd  elliptic_loop.pyx  hyCythonize.pxd  hyCythonize.pyx  mass_approx_eigenvalue.pxd  mass_approx_eigenvalue.pyx  mass_approx_eigenvalue_loop.pxd  mass_approx_eigenvalue_loop.pyx  nonlinear_eigenvalue.pxd  nonlinear_eigenvalue.pyx  nonlinear_eigenvalue_loop.pxd  nonlinear_eigenvalue_loop.pyx  parabolic.pxd  parabolic.pyx  parabolic_loop.pxd  parabolic_loop.pyx  shifted_inverse_eigenvalue.pxd  shifted_inverse_eigenvalue.pyx  shifted_inverse_eigenvalue_loop.pxd  shifted_inverse_eigenvalue_loop.pyx
domains/: L_lim.geo  L_shape_functions.py  SimpleTriangle.geo  aggregate_1000_tree.pts  aggregate_5.pts  aggregate_5000_tree.pts  cross.geo  injection_test.geo  l_level1.geo  leVeque_hg.geo  line.geo  plus_shape_functions.py  simplex_1_1.geo  simplex_1_2.geo  simplex_1_3.geo  simplex_1_4.geo  simplex_1_5.geo  square.geo  star_2_lim.geo  star_3_lim.geo  star_shape_functions.py  star_shape_functions_fdir.py  triangle.pts
doxygen/: CMakeLists.txt  Doxyfile
doxygen/include/: example_diffusion.h  example_diffusion_cxx.dox  example_diffusion_py.dox
examples/: CMakeLists.txt  diffusion_elliptic.cxx  diffusion_elliptic.py
examples/parameters/: diffusion.hxx
examples_c++/: DiffusionPlot1.cxx  DiffusionTest1.C  DiffusionTest1.cxx  DiffusionTest2.cxx  ElasticityTest1.cxx  MappingMultilinear.cxx  MappingUnitCube.cxx  Plot1.cxx  Plot2.cxx  PointTest.cxx
jupyter/: CMakeLists.txt  advection.ipynb  diffusion_elliptic.ipynb  example1.ipynb
python_solvers/: coarse_basis.py
reproducables_python/: advection_convergence_parabolic.py  advection_convergence_rotation.py  advection_diffusion_reaction_convergence_elliptic.py  advection_diffusion_reaction_hypergraph_convergence_elliptic.py  advection_hypergraph.py  bilaplacian_convergence.py  bilaplacian_convergence_eigenvalue.py  bilaplacian_convergence_eigenvalue_approx.depr  bilaplacian_convergence_eigenvalue_approx.py  bilaplacian_convergence_eigenvalue_comb.py  bilaplacian_convergence_eigenvalue_newt.py  bilaplacian_convergence_eigenvalue_shifted_inverse.py  bilaplacian_convergence_elliptic.py  bilaplacian_convergence_parabolic.py  bilaplacian_convergence_parabolic_approx.depr  bilaplacian_convergence_parabolic_approx.py  bilaplacian_hypergraph_convergence_eigenvalue_approx.py  bilaplacian_hypergraph_convergence_eigenvalue_comb.py  bilaplacian_hypergraph_convergence_eigenvalue_newt.py  bilaplacian_hypergraph_convergence_eigenvalue_shifted_inverse.py  bilaplacian_hypergraph_convergence_elliptic.py  bilaplacian_test.py  diffusion_convergence.py  diffusion_convergence_eigenvalue.py  diffusion_convergence_eigenvalue_approx.depr  diffusion_convergence_eigenvalue_approx.py  diffusion_convergence_eigenvalue_comb.py  diffusion_convergence_eigenvalue_newt.py  diffusion_convergence_eigenvalue_shift_invert.py  diffusion_convergence_eigenvalue_shifted_inverse.py  diffusion_convergence_elliptic.py  diffusion_convergence_elliptic_ip.py  diffusion_convergence_elliptic_postprocess.py  diffusion_convergence_elliptic_ref.py  diffusion_convergence_hypergraph_elliptic.py  diffusion_convergence_parabolic.py  diffusion_convergence_parabolic_approx.depr  diffusion_convergence_parabolic_approx.py  diffusion_eigenvalues.py  diffusion_hypergraph_convergence_eigenvalue_approx.py  (+8 more)
reproducibles_python/: advection_convergence_leVeque_hypergraph.py  advection_convergence_parabolic.py  advection_convergence_rotation.py  advection_diffusion_reaction_convergence_elliptic.py  advection_diffusion_reaction_hypergraph_convergence_elliptic.py  advection_hypergraph.py  bilaplacian_convergence_eigenvalue_approx.py  bilaplacian_convergence_eigenvalue_comb.py  bilaplacian_convergence_eigenvalue_newt.py  bilaplacian_convergence_eigenvalue_shifted_inverse.py  bilaplacian_convergence_elliptic.py  bilaplacian_convergence_parabolic.py  bilaplacian_hypergraph_convergence_eigenvalue_approx.py  bilaplacian_hypergraph_convergence_eigenvalue_comb.py  bilaplacian_hypergraph_convergence_eigenvalue_newt.py  bilaplacian_hypergraph_convergence_eigenvalue_shifted_inverse.py  bilaplacian_hypergraph_convergence_elliptic.py  diffusion_L.py  diffusion_L_eigenvalue_approx.py  diffusion_L_eigenvalue_comb.py  diffusion_L_eigenvalue_newt.py  diffusion_L_eigenvalue_shifted_inverse.py  diffusion_convergence_eigenvalue_approx.py  diffusion_convergence_eigenvalue_comb.py  diffusion_convergence_eigenvalue_cross.py  diffusion_convergence_eigenvalue_newt.py  diffusion_convergence_eigenvalue_shifted_inverse.py  (+36 more)
submodules/: CMakeLists.txt
tests_c++/: CMakeLists.txt  DiffusionTest1.cxx  DiffusionTest2.cxx  ElasticityTest1.cxx  MappingMultilinear.cxx  MappingMultilinear.depr  MappingUnitCube.cxx  MappingUnitCube.depr  Plot1.cxx  Plot2.cxx  PointTest.cxx  bilaplacian_convergence.cxx  bilaplacian_convergence.depr  diffusion_convergence.cxx  diffusion_convergence.depr  diffusion_dimensions.cxx  diffusion_floatings.cxx  diffusion_plotting.cxx  elasticity_simple.cxx  plot_refined.cxx  plot_simple.cxx  point_functions.cxx  tensor_rank1.depr
(+149 files in other folders)
